# easy_canvas

./: Cargo.toml  README.md
canvas/: Cargo.toml
canvas/examples/: DoNotPutExamplesHere.md
canvas/src/: canvas.rs  drawing.rs  host.rs  lib.rs  shape.rs  style.rs  transform.rs
canvas_quick_window/: Cargo.toml  build.rs
canvas_quick_window/examples/: mandelbrot.rs  window.rs
canvas_quick_window/examples/res/: mandelbrot.glsl
canvas_quick_window/src/: lib.rs
easy_canvas/: Cargo.toml
easy_canvas/src/: canvas.rs  color.rs  drawing.rs  host.rs  lib.rs  shape.rs  style.rs
quick_window/: Cargo.toml  build.rs
quick_window/examples/: fade.rs  mandelbrot.rs  window.rs
quick_window/src/: lib.rs
