[package]
name = "easy_canvas_quick_window"
version = "0.1.0"
authors = ["shivshank"]

exclude = ["examples/res/*"]

[dependencies]
gl = "0.6.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[dependencies.easy_canvas]
path = "../easy_canvas"
features = ["drawing"]
